; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/master/extr_master_citus_tools.c_GetConnectionStatusAndResult.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/master/extr_master_citus_tools.c_GetConnectionStatusAndResult.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@CONNECTION_BAD = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [16 x i8] c"connection lost\00", align 1
@.str.1 = private unnamed_addr constant [25 x i8] c"query result unavailable\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*, i32*, i32)* @GetConnectionStatusAndResult to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @GetConnectionStatusAndResult(%struct.TYPE_4__* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 1, i32* %8, align 4
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i64 @PQstatus(i32 %15)
  store i64 %16, i64* %9, align 8
  store i32 0, i32* %10, align 4
  store i32* null, i32** %11, align 8
  store i32 0, i32* %12, align 4
  %17 = load i32*, i32** %6, align 8
  store i32 0, i32* %17, align 4
  %18 = load i32, i32* %7, align 4
  %19 = call i32 @resetStringInfo(i32 %18)
  %20 = load i64, i64* %9, align 8
  %21 = load i64, i64* @CONNECTION_BAD, align 8
  %22 = icmp eq i64 %20, %21
  br i1 %22, label %23, label %27

23:                                               ; preds = %3
  %24 = load i32, i32* %7, align 4
  %25 = call i32 @appendStringInfo(i32 %24, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  %26 = load i32, i32* %8, align 4
  store i32 %26, i32* %4, align 4
  br label %59

27:                                               ; preds = %3
  %28 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %29 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = call i32 @PQconsumeInput(i32 %30)
  store i32 %31, i32* %10, align 4
  %32 = load i32, i32* %10, align 4
  %33 = icmp eq i32 %32, 0
  br i1 %33, label %34, label %38

34:                                               ; preds = %27
  %35 = load i32, i32* %7, align 4
  %36 = call i32 @appendStringInfo(i32 %35, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0))
  %37 = load i32, i32* %8, align 4
  store i32 %37, i32* %4, align 4
  br label %59

38:                                               ; preds = %27
  %39 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %40 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 4
  %42 = call i64 @PQisBusy(i32 %41)
  %43 = icmp ne i64 %42, 0
  br i1 %43, label %44, label %46

44:                                               ; preds = %38
  store i32 0, i32* %8, align 4
  %45 = load i32, i32* %8, align 4
  store i32 %45, i32* %4, align 4
  br label %59

46:                                               ; preds = %38
  %47 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %48 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %47, i32 0, i32 0
  %49 = load i32, i32* %48, align 4
  %50 = call i32* @PQgetResult(i32 %49)
  store i32* %50, i32** %11, align 8
  %51 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %52 = load i32*, i32** %11, align 8
  %53 = load i32, i32* %7, align 4
  %54 = call i32 @EvaluateQueryResult(%struct.TYPE_4__* %51, i32* %52, i32 %53)
  store i32 %54, i32* %12, align 4
  %55 = load i32*, i32** %11, align 8
  %56 = call i32 @PQclear(i32* %55)
  %57 = load i32, i32* %12, align 4
  %58 = load i32*, i32** %6, align 8
  store i32 %57, i32* %58, align 4
  store i32 1, i32* %8, align 4
  store i32 1, i32* %4, align 4
  br label %59

59:                                               ; preds = %46, %44, %34, %23
  %60 = load i32, i32* %4, align 4
  ret i32 %60
}

declare dso_local i64 @PQstatus(i32) #1

declare dso_local i32 @resetStringInfo(i32) #1

declare dso_local i32 @appendStringInfo(i32, i8*) #1

declare dso_local i32 @PQconsumeInput(i32) #1

declare dso_local i64 @PQisBusy(i32) #1

declare dso_local i32* @PQgetResult(i32) #1

declare dso_local i32 @EvaluateQueryResult(%struct.TYPE_4__*, i32*, i32) #1

declare dso_local i32 @PQclear(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
